[gd_scene load_steps=8 format=2]

[ext_resource path="res://PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/PNG/background2.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/PNG/element_0069_Layer-71.png" type="Texture" id=3]
[ext_resource path="res://defaultFont.tres" type="Theme" id=4]
[ext_resource path="res://assets/GUI/PNG/element_0041_Layer-43.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/PNG/element_0058_Layer-60.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/PNG/element_0009_Layer-11.png" type="Texture" id=7]

[node name="PauseScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
margin_left = 323.0
margin_top = 104.333
margin_right = 718.0
margin_bottom = 194.333
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer"]
margin_left = 323.0
margin_top = 205.333
margin_right = 718.0
margin_bottom = 295.333
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer"]
margin_left = 323.0
margin_top = 306.333
margin_right = 718.0
margin_bottom = 396.333
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer"]
margin_left = 323.0
margin_top = 416.333
margin_right = 718.0
margin_bottom = 506.333
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = 305.322
margin_top = 111.0
margin_right = 381.322
margin_bottom = 261.0
rect_scale = Vector2( 1.15542, 3.38987 )
texture = ExtResource( 6 )
flip_h = true

[node name="TextureRect6" type="TextureRect" parent="CanvasLayer"]
margin_left = 707.322
margin_top = 98.0
margin_right = 783.322
margin_bottom = 248.0
rect_scale = Vector2( 1.15542, 3.38987 )
texture = ExtResource( 6 )

[node name="TextureRect7" type="TextureRect" parent="CanvasLayer"]
margin_left = 341.322
margin_top = 82.0
margin_right = 440.322
margin_bottom = 123.0
rect_rotation = 89.9999
rect_scale = Vector2( 1.00472, 1.17858 )
texture = ExtResource( 5 )
flip_v = true

[node name="TextureRect9" type="TextureRect" parent="CanvasLayer"]
margin_left = 743.0
margin_top = 82.0
margin_right = 842.0
margin_bottom = 123.0
rect_rotation = 89.9999
rect_scale = Vector2( 1.00472, 1.17858 )
texture = ExtResource( 5 )

[node name="TextureRect19" type="TextureRect" parent="CanvasLayer"]
margin_left = 444.0
margin_top = 556.0
margin_right = 520.0
margin_bottom = 706.0
rect_rotation = -89.9999
rect_scale = Vector2( 1.13462, 0.983643 )
texture = ExtResource( 6 )
flip_h = true

[node name="TextureRect17" type="TextureRect" parent="CanvasLayer"]
margin_left = 372.0
margin_top = 521.0
margin_right = 471.0
margin_bottom = 562.0
rect_scale = Vector2( 1.00472, 1.17858 )
texture = ExtResource( 5 )
flip_v = true

[node name="TextureRect18" type="TextureRect" parent="CanvasLayer"]
margin_left = 558.0
margin_top = 521.0
margin_right = 657.0
margin_bottom = 562.0
rect_scale = Vector2( 1.00472, 1.17858 )
texture = ExtResource( 5 )
flip_h = true
flip_v = true

[node name="TextureRect20" type="TextureRect" parent="CanvasLayer"]
margin_left = 583.0
margin_top = 57.7692
margin_right = 659.0
margin_bottom = 207.769
rect_rotation = -270.0
rect_scale = Vector2( 1.13462, 0.983643 )
texture = ExtResource( 6 )
flip_h = true
flip_v = true

[node name="TextureRect21" type="TextureRect" parent="CanvasLayer"]
margin_left = 379.0
margin_top = 44.0
margin_right = 478.0
margin_bottom = 85.0
rect_scale = Vector2( 1.00472, 1.17858 )
texture = ExtResource( 5 )

[node name="TextureRect22" type="TextureRect" parent="CanvasLayer"]
margin_left = 565.0
margin_top = 44.0001
margin_right = 664.0
margin_bottom = 85.0001
rect_scale = Vector2( 1.00472, 1.17858 )
texture = ExtResource( 5 )
flip_h = true

[node name="TextureRect10" type="TextureRect" parent="CanvasLayer"]
margin_left = 694.0
margin_top = 526.468
margin_right = 793.0
margin_bottom = 567.468
rect_rotation = -89.9999
rect_scale = Vector2( 1.00472, 1.17858 )
texture = ExtResource( 5 )
flip_v = true

[node name="TextureRect8" type="TextureRect" parent="CanvasLayer"]
margin_left = 291.0
margin_top = 539.467
margin_right = 390.0
margin_bottom = 580.467
rect_rotation = -89.9999
rect_scale = Vector2( 1.00472, 1.17858 )
texture = ExtResource( 5 )

[node name="TextureRect11" type="TextureRect" parent="CanvasLayer"]
margin_left = 306.0
margin_top = 44.0
margin_right = 440.0
margin_bottom = 130.0
rect_scale = Vector2( 0.709171, 0.777757 )
texture = ExtResource( 7 )

[node name="TextureRect12" type="TextureRect" parent="CanvasLayer"]
margin_left = 305.0
margin_top = 507.0
margin_right = 439.0
margin_bottom = 593.0
rect_scale = Vector2( 0.709171, 0.777757 )
texture = ExtResource( 7 )
flip_v = true

[node name="TextureRect13" type="TextureRect" parent="CanvasLayer"]
margin_left = 635.0
margin_top = 44.0
margin_right = 769.0
margin_bottom = 130.0
rect_scale = Vector2( 0.709171, 0.777757 )
texture = ExtResource( 7 )
flip_h = true

[node name="TextureRect14" type="TextureRect" parent="CanvasLayer"]
margin_left = 635.0
margin_top = 494.0
margin_right = 769.0
margin_bottom = 580.0
rect_scale = Vector2( 0.709171, 0.777757 )
texture = ExtResource( 7 )
flip_h = true
flip_v = true

[node name="quit" type="Button" parent="CanvasLayer"]
margin_left = 383.0
margin_top = 430.0
margin_right = 653.0
margin_bottom = 497.0
theme = ExtResource( 4 )
text = "QUIT"
flat = true

[node name="resume" type="Button" parent="CanvasLayer"]
margin_left = 383.0
margin_top = 112.333
margin_right = 653.0
margin_bottom = 179.333
theme = ExtResource( 4 )
text = "RESUME"
flat = true

[node name="save" type="Button" parent="CanvasLayer"]
margin_left = 383.0
margin_top = 215.333
margin_right = 653.0
margin_bottom = 282.333
theme = ExtResource( 4 )
text = "SAVE"
flat = true

[node name="restart" type="Button" parent="CanvasLayer"]
margin_left = 383.0
margin_top = 319.333
margin_right = 653.0
margin_bottom = 386.333
theme = ExtResource( 4 )
text = "RESTART"
flat = true

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="CanvasLayer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/resume" to="." method="_on_resume_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/resume" to="." method="_on_resume_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/save" to="." method="_on_save_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/save" to="." method="_on_save_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/save" to="." method="_on_save_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/restart" to="." method="_on_restart_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/restart" to="." method="_on_restart_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/restart" to="." method="_on_restart_pressed"]
